# CodingInterviewChinese2

./: .gitignore  CMakeLists.txt  build_test.sh
01_AssignmentOperator/: AssignmentOperator.cpp  CMakeLists.txt
02_Singleton/: Program.cs
02_Singleton/Properties/: AssemblyInfo.cs
03_01_DuplicationInArray/: FindDuplication.cpp
03_02_DuplicationInArrayNoEdit/: CMakeLists.txt  FindDuplicationNoEdit.cpp
04_FindInPartiallySortedMatrix/: FindInPartiallySortedMatrix.cpp
05_ReplaceSpaces/: ReplaceSpaces.cpp
06_PrintListInReversedOrder/: PrintListInReversedOrder.cpp
07_ConstructBinaryTree/: ConstructBinaryTree.cpp
08_NextNodeInBinaryTrees/: CMakeLists.txt  NextNodeInBinaryTrees.cpp
09_QueueWithTwoStacks/: Queue.h  QueueWithTwoStacks.cpp
10_Fibonacci/: Fibonacci.cpp
11_MinNumberInRotatedArray/: MinNumberInRotatedArray.cpp
12_StringPathInMatrix/: StringPathInMatrix.cpp
13_RobotMove/: RobotMove.cpp
14_CuttingRope/: CuttingRope.cpp
15_NumberOf1InBinary/: NumberOf1InBinary.cpp
16_Power/: Power.cpp
17_Print1ToMaxOfNDigits/: Print1ToMaxOfNDigits.cpp
18_01_DeleteNodeInList/: DeleteNodeInList.cpp
18_02_DeleteDuplicatedNode/: DeleteDuplicatedNode.cpp
19_RegularExpressionsMatching/: CMakeLists.txt  RegularExpressions.cpp
20_NumericStrings/: NumericStrings.cpp
21_ReorderArray/: ReorderArray.cpp
22_KthNodeFromEnd/: KthNodeFromEnd.cpp
23_EntryNodeInListLoop/: EntryNodeInListLoop.cpp
24_ReverseList/: ReverseList.cpp
25_MergeSortedLists/: MergeSortedLists.cpp
26_SubstructureInTree/: SubstructureInTree.cpp
27_MirrorOfBinaryTree/: MirrorOfBinaryTree.cpp
28_SymmetricalBinaryTree/: SymmetricalBinaryTree.cpp
29_PrintMatrix/: PrintMatrix.cpp
30_MinInStack/: MinInStack.cpp
31_StackPushPopOrder/: StackPushPopOrder.cpp
32_01_PrintTreeFromTopToBottom/: PrintTreeFromTopToBottom.cpp
32_02_PrintTreesInLines/: PrintTreesInLines.cpp
32_03_PrintTreesInZigzag/: PrintTreesInZigzag.cpp
33_SquenceOfBST/: SquenceOfBST.cpp
34_PathInTree/: PathInTree.cpp
35_CopyComplexList/: CopyComplexList.cpp
36_ConvertBinarySearchTree/: CMakeLists.txt  ConvertBinarySearchTree.cpp
37_SerializeBinaryTrees/: SerializeBinaryTrees.cpp
38_StringPermutation/: StringPermutation.cpp
39_MoreThanHalfNumber/: MoreThanHalfNumber.cpp
40_KLeastNumbers/: KLeastNumbers.cpp
41_StreamMedian/: StreamMedian.cpp
42_GreatestSumOfSubarrays/: GreatestSumOfSubarrays.cpp
43_NumberOf1/: NumberOf1.cpp
44_DigitsInSequence/: DigitsInSequence.cpp
45_SortArrayForMinNumber/: CMakeLists.txt  SortArrayForMinNumber.cpp
46_TranslateNumbersToStrings/: TranslateNumbersToStrings.cpp
47_MaxValueOfGifts/: MaxValueOfGifts.cpp
49_UglyNumber/: UglyNumber.cpp
50_01_FirstNotRepeatingChar/: FirstNotRepeatingChar.cpp
50_02_FirstCharacterInStream/: FirstCharacterInStream.cpp
51_InversePairs/: InversePairs.cpp
52_FirstCommonNodesInLists/: FirstCommonNodesInLists.cpp
53_01_NumberOfK/: NumberOfK.cpp
53_02_MissingNumber/: MissingNumber.cpp
53_03_IntegerIdenticalToIndex/: IntegerIdenticalToIndex.cpp
54_KthNodeInBST/: KthNodeInBST.cpp
55_01_TreeDepth/: TreeDepth.cpp
55_02_BalancedBinaryTree/: BalancedBinaryTree.cpp
56_01_NumbersAppearOnce/: NumbersAppearOnce.cpp
56_02_NumberAppearingOnce/: NumberAppearingOnce.cpp
57_01_TwoNumbersWithSum/: TwoNumbersWithSum.cpp
57_02_ContinuousSquenceWithSum/: ContinuousSquenceWithSum.cpp
58_01_ReverseWordsInSentence/: ReverseWordsInSentence.cpp
58_02_LeftRotateString/: LeftRotateString.cpp
59_01_MaxInSlidingWindow/: MaxInSlidingWindow.cpp
59_02_QueueWithMax/: QueueWithMax.cpp
60_DicesProbability/: DicesProbability.cpp
61_ContinousCards/: ContinousCards.cpp
62_LastNumberInCircle/: LastNumberInCircle.cpp
63_MaximalProfit/: MaximalProfit.cpp
64_Accumulate/: Accumulate.cpp
65_AddTwoNumbers/: AddTwoNumbers.cpp
66_ConstuctArray/: ConstuctArray.cpp
67_StringToInt/: StringToInt.cpp
68_CommonParentInTree/: CommonParentInTree.cpp
Utilities/: Array.cpp  List.cpp  Tree.cpp
