cmake_minimum_required(VERSION 3.10)
project(CodingInterviewChinese2)

set(CMAKE_CXX_FLAGS "-g")
set(CMAKE_CXX_STANDARD 11)

add_subdirectory(01_AssignmentOperator)
add_subdirectory(03_01_DuplicationInArray)
add_subdirectory(03_02_DuplicationInArrayNoEdit)
add_subdirectory(04_FindInPartiallySortedMatrix)
add_subdirectory(05_ReplaceSpaces)
add_subdirectory(06_PrintListInReversedOrder)
add_subdirectory(07_ConstructBinaryTree)
add_subdirectory(08_NextNodeInBinaryTrees)
add_subdirectory(09_QueueWithTwoStacks)
add_subdirectory(10_Fibonacci)
add_subdirectory(11_MinNumberInRotatedArray)
add_subdirectory(12_StringPathInMatrix)
add_subdirectory(13_RobotMove)
add_subdirectory(14_CuttingRope)
add_subdirectory(15_NumberOf1InBinary)
add_subdirectory(16_Power)
add_subdirectory(17_Print1ToMaxOfNDigits)
add_subdirectory(18_01_DeleteNodeInList)
add_subdirectory(18_02_DeleteDuplicatedNode)
add_subdirectory(19_RegularExpressionsMatching)
add_subdirectory(20_NumericStrings)
add_subdirectory(21_ReorderArray)
add_subdirectory(22_KthNodeFromEnd)
add_subdirectory(23_EntryNodeInListLoop)
add_subdirectory(24_ReverseList)
add_subdirectory(25_MergeSortedLists)
add_subdirectory(26_SubstructureInTree)
add_subdirectory(27_MirrorOfBinaryTree)
add_subdirectory(28_SymmetricalBinaryTree)
add_subdirectory(29_PrintMatrix)
add_subdirectory(30_MinInStack)
add_subdirectory(31_StackPushPopOrder)
add_subdirectory(32_01_PrintTreeFromTopToBottom)
add_subdirectory(32_02_PrintTreesInLines)
add_subdirectory(32_03_PrintTreesInZigzag)
add_subdirectory(33_SquenceOfBST)
add_subdirectory(34_PathInTree)
add_subdirectory(35_CopyComplexList)
add_subdirectory(36_ConvertBinarySearchTree)
add_subdirectory(37_SerializeBinaryTrees)
add_subdirectory(38_StringPermutation)
add_subdirectory(39_MoreThanHalfNumber)
add_subdirectory(40_KLeastNumbers)
add_subdirectory(41_StreamMedian)
add_subdirectory(42_GreatestSumOfSubarrays)
add_subdirectory(43_NumberOf1)
add_subdirectory(44_DigitsInSequence)
add_subdirectory(45_SortArrayForMinNumber)
add_subdirectory(46_TranslateNumbersToStrings)
add_subdirectory(47_MaxValueOfGifts)
add_subdirectory(48_LongestSubstringWithoutDup)
add_subdirectory(49_UglyNumber)
add_subdirectory(50_01_FirstNotRepeatingChar)
add_subdirectory(50_02_FirstCharacterInStream)
add_subdirectory(51_InversePairs)
add_subdirectory(52_FirstCommonNodesInLists)
add_subdirectory(53_01_NumberOfK)
add_subdirectory(53_02_MissingNumber)
add_subdirectory(53_03_IntegerIdenticalToIndex)
add_subdirectory(54_KthNodeInBST)
add_subdirectory(55_01_TreeDepth)
add_subdirectory(55_02_BalancedBinaryTree)
add_subdirectory(56_01_NumbersAppearOnce)
add_subdirectory(56_02_NumberAppearingOnce)
add_subdirectory(57_01_TwoNumbersWithSum)
add_subdirectory(57_02_ContinuousSquenceWithSum)
add_subdirectory(58_01_ReverseWordsInSentence)
add_subdirectory(58_02_LeftRotateString)
add_subdirectory(59_01_MaxInSlidingWindow)
add_subdirectory(59_02_QueueWithMax)
add_subdirectory(60_DicesProbability)
add_subdirectory(61_ContinousCards)
add_subdirectory(62_LastNumberInCircle)
add_subdirectory(63_MaximalProfit)
add_subdirectory(64_Accumulate)
add_subdirectory(65_AddTwoNumbers)
add_subdirectory(66_ConstuctArray)
add_subdirectory(67_StringToInt)
add_subdirectory(68_CommonParentInTree)
